# learn-llvm

./: building-clang-guide.md
clang-plugin-demo/: .gitignore  CMakeLists.txt  EvalExprTool.cpp  ForLoopIteratorVisitor.cpp  NamingConventionPlugin.cpp  README.md  SimpleNamingChecker.cpp  setup-llvm-alternatives.sh  test-expr.cpp  test-forloop.cpp  test.cpp
clang-plugin-demo/scripts/: test-forloop-iterator.sh
clang-plugin-demo/src/: ForLoopIteratorVisitor.cpp  NamingCheckerTool.cpp
